tests/fail/02_item_struct.stderr
error: unexpected end of input, expected identifier
 --> tests/fail/02_item_struct.rs:3:1
  |
3 | / #[alias(
4 | |     S1,
5 | |     deprecated(S2),
6 | |     deprecated(S3, since = "0.1.0"),
7 | |     deprecated(S4, note = "deprecation note"),
8 | |     deprecated(S5, since = "0.1.0", note = "deprecation note"),
9 | | )]
  | |__^
  |
  = note: this error originates in the attribute macro `alias` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0425]: cannot find function, tuple struct or tuple variant `S` in this scope
  --> tests/fail/02_item_struct.rs:13:16
   |
13 |     assert_eq!(S(5).0, 5);
   |                ^ not found in this scope

error[E0425]: cannot find function, tuple struct or tuple variant `S1` in this scope
  --> tests/fail/02_item_struct.rs:14:16
   |
14 |     assert_eq!(S1(5).0, 5);
   |                ^^ not found in this scope

error[E0425]: cannot find function, tuple struct or tuple variant `S2` in this scope
  --> tests/fail/02_item_struct.rs:15:16
   |
15 |     assert_eq!(S2(5).0, 5);
   |                ^^ not found in this scope

error[E0425]: cannot find function, tuple struct or tuple variant `S3` in this scope
  --> tests/fail/02_item_struct.rs:16:16
   |
16 |     assert_eq!(S3(5).0, 5);
   |                ^^ not found in this scope

error[E0425]: cannot find function, tuple struct or tuple variant `S4` in this scope
  --> tests/fail/02_item_struct.rs:17:16
   |
17 |     assert_eq!(S4(5).0, 5);
   |                ^^ not found in this scope

error[E0425]: cannot find function, tuple struct or tuple variant `S5` in this scope
  --> tests/fail/02_item_struct.rs:18:16
   |
18 |     assert_eq!(S5(5).0, 5);
   |                ^^ not found in this scope
